<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    tools:context=".DetalhaAvaliacaoFragment">

    <TextView
        android:id="@+id/fragment_detalha_avaliacao_lbl7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pergunta6_enunciado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_detalha_avaliacao_lbl_resp5" />

    <TextView
        android:id="@+id/fragment_detalha_avaliacao_lbl_resp6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="Resposta"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_detalha_avaliacao_lbl7" />

    <TextView
        android:id="@+id/fragment_detalha_avaliacao_lbl6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pergunta5_enunciado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_detalha_avaliacao_lbl_resp4" />

    <TextView
        android:id="@+id/fragment_detalha_avaliacao_lbl_resp5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="Resposta"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_detalha_avaliacao_lbl6" />

    <TextView
        android:id="@+id/fragment_detalha_avaliacao_lbl5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pergunta4_enunciado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_detalha_avaliacao_lbl_resp3" />

    <TextView
        android:id="@+id/fragment_detalha_avaliacao_lbl_resp4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="Resposta"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_detalha_avaliacao_lbl5" />

    <TextView
        android:id="@+id/fragment_detalha_avaliacao_lbl4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pergunta3_enunciado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_detalha_avaliacao_lbl_resp2" />

    <TextView
        android:id="@+id/fragment_detalha_avaliacao_lbl_resp3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="Resposta"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_detalha_avaliacao_lbl4" />

    <TextView
        android:id="@+id/fragment_detalha_avaliacao_lbl3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pergunta2_enunciado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_detalha_avaliacao_lbl_resp1" />

    <TextView
        android:id="@+id/fragment_detalha_avaliacao_lbl_resp2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="Resposta"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_detalha_avaliacao_lbl3" />

    <TextView
        android:id="@+id/fragment_detalha_avaliacao_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pergunta1_enunciado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_detalha_avaliacao_lbl_bairro" />

    <TextView
        android:id="@+id/fragment_detalha_avaliacao_lbl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Empresa:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragment_detalha_avaliacao_lbl_nome_empresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="Nome da Empresa"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_detalha_avaliacao_lbl1" />

    <TextView
        android:id="@+id/fragment_detalha_avaliacao_lbl_bairro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="Nome do Bairro"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_detalha_avaliacao_lbl2" />

    <TextView
        android:id="@+id/fragment_detalha_avaliacao_lbl2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Bairro:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_detalha_avaliacao_lbl_nome_empresa" />

    <TextView
        android:id="@+id/fragment_detalha_avaliacao_lbl_resp1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="Resposta"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_detalha_avaliacao_lbl" />
</androidx.constraintlayout.widget.ConstraintLayout>